tolk-tester/tests/invalid-syntax/err-3482.tolk
type MInt int;

/**
@compilation_should_fail
@stderr expected `=`, got `int`
*/
